postcss/testData/inspections/customPropertiesSet/unresolvedApply.pcss
.foo {
  @apply <error descr="Cannot resolve '--unresolved' custom property set">--unresolved</error>;
}